--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
                     <h1 class="sub-title">About me</h1>
                     <p>Hello,I'm Saahil Pradhan. I am currently pursuing btech in Computer Science and Engineering from SRM University Kattankulathur. My hobbies involving coding and reading fiction books. I am a coding enthusiast. I am a passionate app and web developer currently I am having just months experience in this field and i am learning more and more with each passing day. I have created an health app which is used to book lab test appointments,appoint doctors and buy medicines . It is the only app in this world which supports all these features. I thrive on staying updated with the latest technologies.I'm dedicated to making the digital world a better place place .</p>
                     <div class="tab-titles">
-                        <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
-                        <p class="tab-links"onclick="opentab('experience')">Experience</p>
-                        <p class="tab-links"onclick="opentab('education')">Education </p>
+                        <p class="tab-links active-link" onclick="opentab('skills')">Skills/Certifications</p>
+                        <p class="tab-links"onclick="opentab('experience')">Experience/internships</p>
+                        <p class="tab-links"onclick="opentab('education')">Education and GPA</p>
                     </div>
                     <div class="tab-contents active-tab" id="skills">
                         <ul>
