--- a/index.html
+++ b/index.html
@@ -43,28 +43,28 @@
                     <p>Hello,I'm Saahil Pradhan. I am currently pursuing btech in Computer Science and Engineering from SRM University Kattankulathur. My hobbies involving coding and reading fiction books. I am a coding enthusiast. I am a passionate app and web developer currently I am having just months experience in this field and i am learning more and more with each passing day. I have created an health app which is used to book lab test appointments,appoint doctors and buy medicines . It is the only app in this world which supports all these features. I thrive on staying updated with the latest technologies.I'm dedicated to making the digital world a better place place .</p>
                     <div class="tab-titles">
                         <p class="tab-links active-link" onclick="opentab('skills')">Skills/Certifications</p>
-                        <p class="tab-links"onclick="opentab('experience')">Experience/internships</p>
+                        <p class="tab-links"onclick="opentab('experience')">Experience/Internships</p>
                         <p class="tab-links"onclick="opentab('education')">Education and GPA</p>
                     </div>
                     <div class="tab-contents active-tab" id="skills">
                         <ul>
-                            <li><span>UI?UX</span><br>Designing Web/App interfaces</li>
-                            <li><span>Web Development</span><br>Website Blog Creation</li>
+                            <li><span>Certification</span><br>Internship Certification on DSA from Skolar,Python programming certification from udemy,Math Olympiad,Hackathon/Hackerank certificates </li>
+                            <li><span>Paper Presentation</span><br>Paper published in IEEE on the topic of 24*7 HealthCare App</li>
                             <li><span>App Development</span><br>Building Andriod apps</li>
                         </ul>
                     </div>
                     <div class="tab-contents" id="experience">
                         <ul>
                             <li><span>2023-current</span><br>App Development</li>
-                            <li><span>2023-current</span><br>Web Developer</li>
-                            <li><span>2023-current</span><br>GUI Design</li>
+                            <li><span>Internship</span><br>Did a 3 Months long DSA intenship in Skolar.</li>
+                            <li><span>2023-current</span><br>Coding Competition participation and got 3rd price in the recently held datakon hackathon</li>
                         </ul>
                     </div>
                     <div class="tab-contents" id="education">
                         <ul>
                             <li><span>2008-2011</span><br>Sun Shine High School</li>
-                            <li><span>2012-2022</span><br>St. Anthony's School</li>
-                            <li><span>2023-current</span><br>SRM University</li>
+                            <li><span>2012-2022</span><br>St. Anthony's School, ISC Boards 97.25%,All India Rank 10th</li>
+                            <li><span>2023-current</span><br>SRM University, First semester GPA-10, Second Semester GPA-10</li>
                         </ul>
                     </div>
                     
