--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <div id="header">
     <div class="container">
         <nav>
-            <img src="images/logo.png" class="logo">
+            <img src="logo.png" class="logo">
             <ul id="sidemenu">
                 <li><a href="#header">Home</a></li>
                 <li><a href="#about">About</a></li>
@@ -36,7 +36,7 @@
         <div class="container">
             <div class="row">
                 <div class="about-col-1">
-                    <img src="images/user.png.jpeg">
+                    <img src="user.png.jpeg">
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title">About me</h1>
@@ -104,7 +104,7 @@
         <h1 class="sub-title">My work</h1>
         <div class="work-list">
             <div class="work">
-                <img src="images/work-1.png.png">
+                <img src="work-1.png.png">
                 <div class="layer">
                     <h3>Health Care App</h3>
                     <p>In this app we are able to book appointments with doctors , 
@@ -115,7 +115,7 @@
                 
             </div>
             <div class="work">
-                <img src="images/work-2.png.png">
+                <img src="work-2.png.png">
                 <div class="layer">
                     <h3>Restaurant management app</h3>
                     <p>In this app the restaurant owners will prepare the dish according to the type of orders and the arrival and preparation
@@ -124,7 +124,7 @@
                 </div>
             </div>
             <div class="work">
-                <img src="images/work-3.png.png">
+                <img src="work-3.png.png">
                 <div class="layer">
                     <h3>Railawy ticket booking app</h3> App</h3>
                     <p>In this app we can book railaway tickets . In this app we are given the total number of avaliable seats 
@@ -153,7 +153,7 @@
                     <a href="https://www.instagram.com/isaahilpradhan/"><i class="fab fa-instagram"></i></a>
                     <a href="https://www.linkedin.com/in/saahil-pradhan-37312024b?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="fab fa-linkedin"></i></a>
                 </div>
-                <a href="images/my-cv.pdf" download class="btn btn2">Download CV</a>
+                <a href="my-cv.pdf" download class="btn btn2">Download CV</a>
             </div>
             <div class="contact-right">
                 <form name="submit-to-google-sheet">
